--- a/html/composer.json
+++ b/html/composer.json
@@ -54,7 +54,9 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/",
+      "GPBMetadata\\": "grpc/GPBMetadata",
+      "Grpc\\": "grpc/Grpc"
     },
     "files": []
   },
