--- a/html/composer.json
+++ b/html/composer.json
@@ -56,7 +56,7 @@
     "psr-4": {
       "App\\": "app/",
       "GPBMetadata\\": "grpc/GPBMetadata",
-      "Grpc\\": "grpc/Grpc"
+      "Pix\\": "grpc/Pix"
     },
     "files": []
   },
