feat: connect to getpix_gateway_getpix docker network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
       - ./html:/var/www/html
     working_dir: /var/www/html
     networks:
-      - docker_dbserver_default
+      - getpix_gateway_getpix
 
 networks:
-  docker_dbserver_default:
+  getpix_gateway_getpix:
     external: true
